--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -6,7 +6,7 @@
        />
 
     Uberon is an integrated cross-species ontology covering anatomical
-    structures in animals. See the <a href="about.html">about</a> page
+    structures in animals. See the <a href="{{ site.baseurl}}about.html">about</a> page
     for more info.
 
 </p>					
