--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,12 +5,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="{{ site.baseurl}}/">{{ site.title }}</a>
+          <a class="brand" href="{{ site.baseurl}}">{{ site.title }}</a>
           <div class="nav-collapse">
             <ul class="nav">
 
               <li class="">
-                <a href="{{ site.baseurl}}/"><i class="icon-home"></i> Home</a>
+                <a href="{{ site.baseurl}}"><i class="icon-home"></i> Home</a>
               </li>
 
               <li class="dropdown">
@@ -18,12 +18,12 @@
                   <i class="icon-list"></i> About <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="extra" href="{{ site.baseurl}}/about.html">Overview</a></li>
-                  <li><a class="extra" href="{{ site.baseurl}}/allnews.html">News</a></li>
-                  <li><a class="extra" href="{{ site.baseurl}}/about/adopters.html">Adopters</a></li>
-                  <li><a class="extra" href="{{ site.baseurl}}/about/participate.html">Participate</a></li>
-                  <li><a class="extra" href="{{ site.baseurl}}/publications.html">Publications</a></li>
-                  <li><a class="extra" href="{{ site.baseurl}}/about/acknowledgements.html">Acknowledgements</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}about.html">Overview</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}allnews.html">News</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}about/adopters.html">Adopters</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}about/participate.html">Participate</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}publications.html">Publications</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}about/acknowledgements.html">Acknowledgements</a></li>
                 </ul>
               </li>
 
@@ -32,13 +32,13 @@
                   <i class="icon-list"></i> Explore <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/olsvis.html">OlsVis</a> <i>ontology browser</i>&nbsp;</span></li>
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/ontobee.html">OntoBee</a> <i>ontology browser</i>&nbsp;</span></li>
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/ols.html">OLS</a> <i>ontology browser</i>&nbsp;</span></li>
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/bioportal.html">BioPortal</a> <i>ontology browser</i>&nbsp;</span></li>
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/amigo.html">AmiGO 2</a> <i>annotation queries</i>&nbsp;</span></li>
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/phenoscape.html">Phenoscape</a> <i>evolutionary data</i>&nbsp;</span></li>
-                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}/browse/annotate.html">Annotate Text</a> <i>(experimental)</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/olsvis.html">OlsVis</a> <i>ontology browser</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/ontobee.html">OntoBee</a> <i>ontology browser</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/ols.html">OLS</a> <i>ontology browser</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/bioportal.html">BioPortal</a> <i>ontology browser</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/amigo.html">AmiGO 2</a> <i>annotation queries</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/phenoscape.html">Phenoscape</a> <i>evolutionary data</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/annotate.html">Annotate Text</a> <i>(experimental)</i>&nbsp;</span></li>
                 </ul>
               </li>
 
@@ -47,7 +47,7 @@
                   <i class="icon-list"></i> Download <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="extra" href="{{ site.baseurl}}/downloads.html">Ontology</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}downloads.html">Ontology</a></li>
                 </ul>
               </li>
 
