--- a/_layouts/browse_layout.html
+++ b/_layouts/browse_layout.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Ontology Website">    
     <meta name="author" content="Chris Mungall">
-    <script src="{{ site.baseurl}}/js/all.js" type="text/javascript"></script>
-    <link href="{{ site.baseurl}}/css/all.css" rel="stylesheet">
+    <script src="{{ site.baseurl}}js/all.js" type="text/javascript"></script>
+    <link href="{{ site.baseurl}}css/all.css" rel="stylesheet">
     
   </head>
   <body data-spy="scroll" data-target=".subnav" data-offset="50">
