--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,12 +3,12 @@
   <div class="span7">    
     <div class="row">
       <div class="span2 hidden-phone hidden-tablet">
-        <a href="{{site.baseurl}}{{ post.url }}" >
+        <a href="{{ post.url }}" >
             <img class="listImage img-rounded" border="0" src="{{ post.image }}" alt="{{ post.title }} image">
         </a>
       </div>
       <div class="span5">
-		<h4><strong><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></strong></h4>      
+		<h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>      
         <p>
           {{ post.summary }}
         </p>
@@ -18,7 +18,7 @@
 		  <br />
                   <!-- <i class="icon-tags"></i> Tags :{% for tag in post.tags %} <a href="/tags/{{ tag }}" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;"><span class="label label-info">{{ tag }}</span></a>  {% if forloop.last != true %} {% endif %} {% endfor %}		            -->
         </p>
-        <p><a href="{{site.baseurl}}{{ post.url }}">Read more</a></p>
+        <p><a href="{{ post.url }}">Read more</a></p>
       </div>
     </div>    
 	<hr>
