--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -36,6 +36,7 @@
                   <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/ontobee.html">OntoBee</a> <i>ontology browser</i>&nbsp;</span></li>
                   <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/ols.html">OLS</a> <i>ontology browser</i>&nbsp;</span></li>
                   <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/bioportal.html">BioPortal</a> <i>ontology browser</i>&nbsp;</span></li>
+                  <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/rgd.html">RGD</a> <i>ontology browser</i>&nbsp;</span></li>
                   <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/amigo.html">AmiGO 2</a> <i>annotation queries</i>&nbsp;</span></li>
                   <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/phenoscape.html">Phenoscape</a> <i>evolutionary data</i>&nbsp;</span></li>
                   <li><span style="white-space: nowrap">&nbsp;<a class="extra" href="{{ site.baseurl}}browse/annotate.html">Annotate Text</a> <i>(experimental)</i>&nbsp;</span></li>
