--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -32,7 +32,7 @@
   <a href="https://twitter.com/{{ site.project.twitter }}" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @{{ site.project.twitter }}</a>
 </p>
 <p>
-        <a href="https://plus.google.com/118292284431535789477"
+        <a href="google.com/+UberonOrg"
            rel="publisher">G+</a>
 </p>
 <p>
