--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 
     <div class="footer">
       <p>
-        <a href="https://plus.google.com/118292284431535789477"
+        <a href="google.com/+UberonOrg"
            rel="publisher">Google+</a>
       </p>
     </div>
