google plus magic

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -32,8 +32,8 @@
   <a href="https://twitter.com/{{ site.project.twitter }}" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @{{ site.project.twitter }}</a>
 </p>
 <p>
-        <a href="google.com/+UberonOrg"
-           rel="publisher">G+</a>
+
+  <a href="https://plus.google.com/+UberonOrg" rel="publisher">Google+</a>
 </p>
 <p>
     <ul class="buttons unstyled">
