google plus magic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,10 @@
   </head>
   <body data-spy="scroll" data-target=".subnav" data-offset="50">
 
+
     {% include navbar.html %}
+
+    <a href="https://plus.google.com/+UberonOrg" rel="publisher"></a>
 
 
     <div class="container">
