--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Ontology Website">    
     <meta name="author" content="Chris Mungall">
+    <meta name="google-site-verification" content="pUPrvanSWnFT6Sxszmd4C9altThi2-3CKOC6pY5YXDg" />
     <script src="{{ site.baseurl}}js/all.js" type="text/javascript"></script>
     <link href="{{ site.baseurl}}css/all.css" rel="stylesheet">
     
@@ -17,7 +18,6 @@
     {% include navbar.html %}
 
     <a href="https://plus.google.com/+UberonOrg" rel="publisher"></a>
-
 
     <div class="container">
         <div class="content">
