--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,8 @@
 
     <div class="footer">
       <p>
+        <a href="/about/contact.html"
+           rel="contact">Contact us</a> |
         <a href="google.com/+UberonOrg"
            rel="publisher">Google+</a>
       </p>
