--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,9 +21,9 @@
                   <li><a class="extra" href="{{ site.baseurl}}about.html">Overview</a></li>
                   <li><a class="extra" href="{{ site.baseurl}}allnews.html">News</a></li>
                   <li><a class="extra" href="{{ site.baseurl}}about/adopters.html">Adopters</a></li>
-                  <li><a class="extra" href="{{ site.baseurl}}about/participate.html">Participate</a></li>
                   <li><a class="extra" href="{{ site.baseurl}}publications.html">Publications</a></li>
                   <li><a class="extra" href="{{ site.baseurl}}about/acknowledgements.html">Acknowledgements</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}about/contact.html">Contact</a></li>
                 </ul>
               </li>
 
@@ -49,6 +49,10 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="extra" href="{{ site.baseurl}}downloads.html">Ontology</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}downloads.html#subsets">Ontology Subsets</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}downloads.html#bridge">Bridge Axioms</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}downloads.html#multiont">Multi-ontology Views</a></li>
+                  <li><a class="extra" href="{{ site.baseurl}}downloads.html#data">Data</a></li>
                 </ul>
               </li>
 
@@ -57,8 +61,13 @@
                   <i class="icon-list"></i> Documentation <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki/Manual">User Manual</a></li>
-                  <li><a class="extra" href="http://www.obofoundry.org/wiki/index.php/UBERON:Main_Page">Legacy wiki</a></li>
+                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki">Wiki</a></li>
+                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki/Manual">Uberon Manual</a></li>
+                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki/Manual#user-docs">User Documentation</a></li>
+                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki/Manual#editor-docs">Editor Documentation</a></li>
+                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki/Manual#design-patterns">Design Patterns</a></li>
+                  <li><a class="extra" href="https://github.com/obophenotype/uberon/wiki/Manual#anatomical-structures">Anatomical Structures</a></li>
+                  <li><a class="extra" href="http://www.obofoundry.org/wiki/index.php/UBERON:Main_Page">Legacy wiki (DEPRECATED)</a></li>
                 </ul>
               </li>
 
