--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,14 @@
     <meta name="description" content="Ontology Website">    
     <meta name="author" content="Chris Mungall">
     <meta name="google-site-verification" content="pUPrvanSWnFT6Sxszmd4C9altThi2-3CKOC6pY5YXDg" />
+
+    <meta name="resource_type" content="Ontology Website"/>
+    <meta name="citation_journal_title" content="Uberon Website"/>
+    <meta name="citation_publication_date" content="{{ page.date }}"/>
+    <meta name="citation_date" content="{{ page.date }}"/>
+    <meta name="citation_author" content="Chris Mungall"/>
+    <meta name="citation_title" content="{{ page.title }}"/>
+
     <script src="{{ site.baseurl}}js/all.js" type="text/javascript"></script>
     <link href="{{ site.baseurl}}css/all.css" rel="stylesheet">
     
