search using OLS

--- a/_includes/ontobee_search.html
+++ b/_includes/ontobee_search.html
@@ -1,7 +1,7 @@
-<form id="form_term_search" action="http://www.ontobee.org/browser/index.php" method="get" style="padding-top:20px; padding-bottom:20px;">
+<form id="form_term_search" action="http://www.ebi.ac.uk/ols/beta/search" method="get" style="padding-top:20px; padding-bottom:20px;">
   <div class="ui-widget">
-    <input aria-haspopup="true" aria-autocomplete="list" role="textbox" autocomplete="off" class="ui-autocomplete-input" id="keywords" name="keywords" size="30" value="">
-    <input name="Submit2" value="Search Uberon" type="submit">
-    <input name="o" id="ontology" value="UBERON" type="hidden">
+    <input aria-haspopup="true" aria-autocomplete="list" role="textbox" autocomplete="off" class="ui-autocomplete-input" id="q" name="q" size="30" value="">
+    <input name="submit" value="Search Uberon" type="submit">
+    <input name="ontology" id="ontology" value="uberon" type="hidden">
   </div>
 </form>
